# agentic-extract

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-23-agentic-extract-design.md  2026-02-23-agentic-extract-implementation-phase3.md  2026-02-23-agentic-extract-implementation.md
docs/skills/: extract.md
src/agentic_extract/: __init__.py  audit.py  models.py  pipeline.py  skill.py
src/agentic_extract/clients/: __init__.py  vlm.py
src/agentic_extract/coordinator/: __init__.py  assembly.py  ingestion.py  layout.py  quality.py  reading_order.py  routing.py
src/agentic_extract/grounding/: __init__.py  visual.py
src/agentic_extract/reextraction/: __init__.py  engine.py
src/agentic_extract/specialists/: __init__.py  table.py  text.py  visual_chart.py  visual_figure.py  visual_formula.py  visual_handwriting.py
src/agentic_extract/tools/: __init__.py  docker_runner.py
tests/: conftest.py  test_audit.py  test_models.py  test_pipeline.py  test_scaffolding.py  test_skill.py
tests/clients/: test_vlm.py
tests/coordinator/: test_assembly.py  test_ingestion.py  test_layout.py  test_quality.py  test_reading_order.py  test_routing.py
tests/grounding/: test_visual.py
tests/integration/: test_end_to_end.py
tests/reextraction/: test_engine.py
tests/specialists/: test_table.py  test_text.py  test_visual_chart.py  test_visual_figure.py  test_visual_formula.py  test_visual_handwriting.py
tests/tools/: test_docker_runner.py
tests/validators/: test_crossref_validator.py  test_grounding_validator.py  test_schema_validator.py  test_semantic_validator.py
(+5 files in other folders)
