[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-extract"
version = "0.1.0"
description = "3-agent document extraction system with dual-model Claude/Codex extraction"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "pillow>=10.0",
    "pdf2image>=1.16",
    "pymupdf>=1.24",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_extract"]
